<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>cat.gencat.agaur</groupId>
    <artifactId>HexaStock</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>HexaStock</name>
    <description>HexaStock - Hexagonal Architecture Multi-Module</description>
    <url/>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>21</java.version>
        <springdoc-openapi.version>2.8.5</springdoc-openapi.version>
        <mysql-connector.version>8.2.0</mysql-connector.version>
        <rest-assured.version>5.4.0</rest-assured.version>
        <jacoco.version>0.8.10</jacoco.version>
    </properties>

    <modules>
        <module>domain</module>
        <module>application</module>
        <module>adapters-inbound-rest</module>
        <module>adapters-inbound-telegram</module>
        <module>adapters-outbound-notification</module>
        <module>adapters-outbound-persistence-jpa</module>
        <module>adapters-outbound-persistence-mongodb</module>
        <module>adapters-outbound-market</module>
        <module>bootstrap</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Testcontainers BOM -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>1.21.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Internal modules -->
            <dependency>
                <groupId>cat.gencat.agaur</groupId>
                <artifactId>hexastock-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cat.gencat.agaur</groupId>
                <artifactId>hexastock-domain</artifactId>
                <version>${project.version}</version>
                <type>test-jar</type>
            </dependency>
            <dependency>
                <groupId>cat.gencat.agaur</groupId>
                <artifactId>hexastock-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cat.gencat.agaur</groupId>
                <artifactId>hexastock-application</artifactId>
                <version>${project.version}</version>
                <type>test-jar</type>
            </dependency>
            <dependency>
                <groupId>cat.gencat.agaur</groupId>
                <artifactId>hexastock-adapters-inbound-rest</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cat.gencat.agaur</groupId>
                <artifactId>hexastock-adapters-inbound-telegram</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cat.gencat.agaur</groupId>
                <artifactId>hexastock-adapters-outbound-persistence-jpa</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cat.gencat.agaur</groupId>
                <artifactId>hexastock-adapters-outbound-persistence-mongodb</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cat.gencat.agaur</groupId>
                <artifactId>hexastock-adapters-outbound-market</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cat.gencat.agaur</groupId>
                <artifactId>hexastock-adapters-outbound-notification</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- Shared test dependencies for all modules -->
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.1.2</version>
                    <configuration>
                        <includes>
                            <include>**/*Test.java</include>
                            <include>**/*Tests.java</include>
                        </includes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.1.2</version>
                    <configuration>
                        <includes>
                            <include>**/*IT.java</include>
                        </includes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
